@@ -3,18 +3,14 @@ package org.example.clientes.repositories;
 import org.example.clientes.model.Tarjeta;
 import org.example.database.RemoteDataBaseManager;
 import org.junit.jupiter.api.*;
-
 import org.testcontainers.containers.PostgreSQLContainer;
 import org.testcontainers.junit.jupiter.Container;
 import org.testcontainers.junit.jupiter.Testcontainers;
-
 import java.sql.Connection;
 import java.sql.DriverManager;
 import java.sql.SQLException;
 import java.time.LocalDate;
 import java.util.List;
-
-
 import static org.junit.jupiter.api.Assertions.*;
 import static org.junit.jupiter.api.Assertions.assertAll;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -25,16 +21,14 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 public class TarjetaRemoteRepositoryImplTest {
 
     @Container
-    public static PostgreSQLContainer<?> postgreContainer = new PostgreSQLContainer<>("postgres:12-alpine")
+    public static PostgreSQLContainer<?> postgreContainer = new PostgreSQLContainer<>("postgres:17-alpine")
             .withDatabaseName("tarjetas_db")
             .withUsername("admin")
             .withPassword("admin123")
             .withInitScript("init.sql");
 
-
     private static RemoteDataBaseManager dataBaseManager;
     private static TarjetaRemoteRepositoryImpl tarjetaRemoteRepository;
-
 
     @BeforeAll
     public static void setUp() throws SQLException {
@@ -61,23 +55,24 @@ public class TarjetaRemoteRepositoryImplTest {
 
     @Test
     @Order(1)
-    void getAll()  {
-        List<Tarjeta> tarjeta =tarjetaRemoteRepository.getAll();
+    void getAll() {
+        List<Tarjeta> tarjetaTest = tarjetaRemoteRepository.getAll();
 
         assertAll(() -> {
-            assertNotNull (tarjeta);
-            assertEquals("Test 01", tarjeta.getFirst().getNombreTitular());
+            assertNotNull(tarjetaTest);
+            assertFalse(tarjetaTest.isEmpty(), "La lista de tarjetas no debe estar vacía");
+            assertEquals("Ana", tarjetaTest.get(0).getNombreTitular());
         });
     }
 
     @Test
     @Order(2)
     public void GetById() {
-        var tarjeta =tarjetaRemoteRepository.getById(1L);
+        var tarjeta = tarjetaRemoteRepository.getById(1L);
 
         assertAll(() -> {
             assertTrue(tarjeta.isPresent());
-            assertEquals("Test 01", tarjeta.get().getNombreTitular());
+            assertEquals("Ana", tarjeta.get().getNombreTitular());
         });
     }
 
@@ -87,7 +82,7 @@ public class TarjetaRemoteRepositoryImplTest {
         var tarjeta = tarjetaRemoteRepository.getById(999L);
 
         assertAll(() -> {
-            assertTrue(tarjeta.isEmpty());
+            assertFalse(tarjeta.isPresent());
         });
     }
 
@@ -95,16 +90,16 @@ public class TarjetaRemoteRepositoryImplTest {
     @Order(4)
     public void Create() {
         Tarjeta tarjeta = Tarjeta.builder()
-               .nombreTitular("Test 04")
-               .numeroTarjeta("1234567890123456")
-               .fechaCaducidad(LocalDate.of(2022, 12, 31))
-               .build();
+                .nombreTitular("Juan")
+                .numeroTarjeta("0987654321098765")
+                .fechaCaducidad(LocalDate.of(2022, 12, 31))
+                .build();
 
         var tarjetaCreada = tarjetaRemoteRepository.create(tarjeta);
 
         assertAll(() -> {
             assertNotNull(tarjetaCreada);
-            assertEquals("Test 04", tarjetaCreada.getNombreTitular());
+            assertEquals("Juan", tarjetaCreada.getNombreTitular());
         });
     }
 
@@ -112,17 +107,17 @@ public class TarjetaRemoteRepositoryImplTest {
     @Order(5)
     public void Update() {
         Tarjeta tarjeta = Tarjeta.builder()
-               .id(1L)
-               .nombreTitular("Test 01 Updated")
-               .numeroTarjeta("1234567890123456")
-               .fechaCaducidad(LocalDate.of(2022, 12, 31))
-               .build();
+                .id(1L)
+                .nombreTitular("Ana Updated")
+                .numeroTarjeta("1234567890123456")
+                .fechaCaducidad(LocalDate.of(2022, 12, 31))
+                .build();
 
         var tarjetaActualizada = tarjetaRemoteRepository.update(1L, tarjeta);
 
         assertAll(() -> {
             assertNotNull(tarjetaActualizada);
-            assertEquals("Test 01 Updated", tarjetaActualizada.getNombreTitular());
+            assertEquals("Ana Updated", tarjetaActualizada.getNombreTitular());
         });
     }
 
@@ -130,11 +125,11 @@ public class TarjetaRemoteRepositoryImplTest {
     @Order(6)
     public void UpdateNotFound() {
         Tarjeta tarjeta = Tarjeta.builder()
-               .id(999L)
-               .nombreTitular("Test 01 Updated")
-               .numeroTarjeta("1234567890123456")
-               .fechaCaducidad(LocalDate.of(2022, 12, 31))
-               .build();
+                .id(999L)
+                .nombreTitular("Ana Updated")
+                .numeroTarjeta("1234567890123456")
+                .fechaCaducidad(LocalDate.of(2022, 12, 31))
+                .build();
 
         var tarjetaActualizada = tarjetaRemoteRepository.update(999L, tarjeta);
 
@@ -146,11 +141,10 @@ public class TarjetaRemoteRepositoryImplTest {
     @Test
     @Order(7)
     public void Delete() {
-        var tarjeta= tarjetaRemoteRepository.delete(99L);
+        var tarjetaEliminada = tarjetaRemoteRepository.delete(99L);
 
         assertAll(() -> {
-            assertFalse(tarjeta);
+            assertFalse(tarjetaEliminada, "La tarjeta no debería existir");
         });
     }
-
 }
